# delta-x-custom-firmware

./: .gitignore  CMakeLists.txt  Makefile  atmega2560.cmake
include/: config.h  pin.h  regs.h  robot.h  stepper.h  uart.h
src/: config.c  main.c  pin.c  robot.c  stepper.c  uart.c
